--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@
     --text-color: hsl(var(--second-hue), 8%, 75%);
     --tect-color-light: hsl(var(--second-hue), 4%, 55%);
     --body-color: hsl(var(--second-hue), 48%, 8%);
-    --container-body: hsl(var(--second-hue), 32%, 12%);
+    --container-color: hsl(var(--second-hue), 32%, 12%);
 
     /* ===== Font And Typhography */
     --body-font: "Poppins", sans-serif;
@@ -242,7 +242,20 @@ Color change in same parts of the website, in light theme
     left: 0;
     row-gap: 1rem;
 }
-
+.home_social-link {
+    width: max-content;
+    background-color: var(--container-color);
+    color: var(--first-color);
+    padding: 0.25rem;
+    border-radius: 0.25rem;
+    display: flex;
+    font-size: 1rem;
+    transition: 0.2s;
+}
+.home_social-link:hover {
+    background-color: var(--first-color);
+    color: #fff;
+}
 
 
 
