--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@
     --first-color-alt: hsl(var(--first-hue), var(--sat), 71%); /* -4% */
     --title-color: hsl(var(--second-hue), 15%, 95%);
     --text-color: hsl(var(--second-hue), 8%, 75%);
-    --tect-color-light: hsl(var(--second-hue), 4%, 55%);
+    --text-color-light: hsl(var(--second-hue), 4%, 55%);
     --body-color: hsl(var(--second-hue), 48%, 8%);
     --container-color: hsl(var(--second-hue), 32%, 12%);
 
@@ -85,7 +85,7 @@ button {
     outline: none;
 }
 img {
-    min-width: 100%;
+    max-width: 100%;
     height: auto;
 }
 
@@ -118,13 +118,13 @@ Color change in same parts of the website, in light theme
 }
 .section_title {
     font-size: var(--h2-font-size);
-    color: var(--fist-color);
+    color: var(--first-color);
     margin-bottom: 2rem;
 }
 .section_subtitle {
     display: block;
     font-size: var(--smaller-font-size);
-    color: var(--tect-color-light);
+    color: var(--text-color-light);
 }
 
 /* ===== Header & Nav ===== */
@@ -148,6 +148,7 @@ Color change in same parts of the website, in light theme
     color: var(--first-color);
     font-weight: var(--font-medium);
     transition: 0.4s;
+    font-size: 1.3rem;
 }
 .nav_logo:hover {
     color: var(--first-color-alt);
@@ -187,6 +188,9 @@ Color change in same parts of the website, in light theme
 /* Change Background Header */
 
 /* ===== HOME ===== */
+.home {
+    margin-bottom: 9rem;
+}
 .home_container {
     position: relative;
     row-gap: 4.5rem;
@@ -300,7 +304,47 @@ Color change in same parts of the website, in light theme
     box-sizing: border-box;
 }
 /* ===== ABOUT ===== */
+.about_container {
+    row-gap: 2.5rem;
+}
+.about_img {
+    width: 220px;
+    border-radius: 1.5rem;
+    justify-self: center;
+}
+.about_data {
+    text-align: center;
+}
+.about_info {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 0.5rem;
+    margin-bottom: 2rem;
+}
+.about_box {
+    background-color: var(--container-color);
+    border-radius: 0.75rem;
+    padding: 0.75rem 0.5rem;
+}
+.about_icon {
+    font-size: 1.4rem;
+    margin-bottom: 0.5rem;
+    color: var(--first-color);
+}
+.about_title {
+    font-size: var(--small-font-size);
+}
+.about_subtitle {
+    font-size: var(--tinny-font-size);
+}
+.about_description {
+    margin-bottom: 2rem;
+}
 /* ===== SKILLS ==== */
+/* ===== SERVICES ===== */
+
+/* Services Modal */
+/* Active Modal */
 
 /* Responsive Breakpoint */
 @media screen and (min-width: 968px) {
