--- a/css/style.css
+++ b/css/style.css
@@ -318,7 +318,7 @@ Color change in same parts of the website, in light theme
 .about_info {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 0.5rem;
+    gap: 0.7rem;
     margin-bottom: 2rem;
 }
 .about_box {
@@ -338,7 +338,7 @@ Color change in same parts of the website, in light theme
     font-size: var(--tinny-font-size);
 }
 .about_description {
-    margin-bottom: 2rem;
+    margin: 2rem;
 }
 /* ===== SKILLS ==== */
 /* ===== SERVICES ===== */
