--- a/css/style.css
+++ b/css/style.css
@@ -217,8 +217,8 @@ Color change in same parts of the website, in light theme
     font-size: var(--biggest-font-size);
 }
 .home_img {
-    width: 145px;
-    margin-left: 23px;
+    width: 170px;
+    /* margin-left: 23px; */
 }       
 .home_handle {
     justify-self: center;
@@ -231,7 +231,7 @@ Color change in same parts of the website, in light theme
     border-radius: 10rem 10rem 1rem 1rem;
     display: flex;
     align-items: flex-end;
-    /* justify-content: sp; */
+    justify-content: center;
     overflow: hidden;
 }
 .home_buttons {
