--- a/css/style.css
+++ b/css/style.css
@@ -190,9 +190,10 @@ Color change in same parts of the website, in light theme
     box-shadow: 0 4px 4px hsla(0, 0, -4%, 0.3);
 }
 
+/* ============ Main ============ */
 /* ===== HOME ===== */
 .home {
-    margin-bottom: 9rem;
+    margin-bottom: 4.5rem;
 }
 .home_container {
     position: relative;
@@ -395,7 +396,36 @@ Color change in same parts of the website, in light theme
 }
 
 /* ===== SERVICES ===== */
+.services_container {
 
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1.5rem;
+    padding-top: 1rem;
+}
+.services_card {
+    background-color: var(--container-color);
+    padding: 3rem 1.5rem 1.5rem;
+    border-radius: 1rem;
+}
+.services_title {
+    font-size: var(--h3-font-size);
+    margin-bottom: 2.5rem;
+}
+.services_button {
+    color: var(--first-color);
+    font-size: var(--small-font-size);
+    display: flex;
+    align-items: center;
+    column-gap: 0.35rem;
+    cursor: pointer;
+}
+.services_button:hover .services_icon {
+    transform: translateX(0.3rem);
+}
+.services_icon {
+    font-size: 1rem;
+    transition: 0.4s;
+}
 /* Services Modal */
 /* Active Modal */
 
