--- a/css/style.css
+++ b/css/style.css
@@ -574,7 +574,7 @@ Color change in same parts of the website, in light theme
 /* ======= CONTACT ======= */
 .contact_container {    
     row-gap: 3rem;
-    padding-bottom: 3rem;
+    padding-bottom: 30rem;
 }
 .contact_title {
     text-align: center;
@@ -596,8 +596,64 @@ Color change in same parts of the website, in light theme
     color: var(--title-color);
     margin-bottom: 0.25rem;
 }
+.contact_card-title,
+.contact_card-data {
+    font-size: var(--small-font-size);
+}
 .contact_card-title {
-    
+    font-weight: var(--font-medium);
+}
+.contact_card-data {
+    display: block;
+    margin: 0.01rem 0 0.75rem;
+}
+.contact_button {
+    color: var(--first-color);
+    font-size: var(--small-font-size);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 0.25rem;
+}
+.contact_button:hover .contact_button-icon {
+    transform: translateX(0.3rem);
+}
+.contact_button-icon {
+    font-size: 1rem;
+    transition:0.4s;
+}
+.contact_form-div {
+    position: relative;
+    margin-bottom: 2rem;
+    height: 4rem;
+}
+.contact_form-input {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: none;
+    border: 2px solid var(--text-color-light);
+    color: var(--text-color);
+    padding: 1.5rem;
+    border-radius: 0.75rem;
+    z-index: 0;
+}
+.contact_form-tag {
+    position: absolute;
+    top: -0.9rem;
+    left: 1.25rem;
+    z-index: 2;
+    padding: 0.3rem;
+    background-color: var(--body-color);
+    font-size: var(--smaller-font-size);
+}
+.contact_form-area {
+    height: 11rem;
+}
+.contact_form-area textarea {
+    resize: none;
 }
 /* ======= FOOTER ======= */
 
