--- a/css/style.css
+++ b/css/style.css
@@ -574,7 +574,7 @@ Color change in same parts of the website, in light theme
 /* ======= CONTACT ======= */
 .contact_container {    
     row-gap: 3rem;
-    padding-bottom: 30rem;
+    padding-bottom: 3rem;
 }
 .contact_title {
     text-align: center;
@@ -656,6 +656,47 @@ Color change in same parts of the website, in light theme
     resize: none;
 }
 /* ======= FOOTER ======= */
+.footer {
+    background-color:var(--first-color);
+}
+.footer_container {
+    padding: 2rem 0 6rem;
+}
+.footer_title,
+a.footer_link {
+    color: var(--body-color);
+}
+.footer_title {
+    text-align: center;
+    margin-bottom: 2rem;
+}
+.footer_list {
+    display: flex;
+    justify-content: center;
+    column-gap: 1.5rem;
+    margin-bottom: 2rem;
+}
+.footer_social {
+    display: flex;
+    justify-content: center;
+    column-gap: 1.25rem;
+}
+.footer_social-link {
+    background-color: var(--body-color);
+    color: var(--first-color);
+    padding: 0.25rem;
+    border-radius: 0.25rem;
+    font-size: 1rem;
+    display: inline-flex;
+}
+.footer_copy {
+    display: block;
+    margin-top: 4.5rem;
+    color: var(--container-color);
+    text-align: center;
+    font-size: var(--smaller-font-size);
+}
+
 
 /* ======= SCROLL BAR ======= */
 
