--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,7 @@ textarea {
 body {
     background-color: var(--body-color);
     color: var(--text-color);
+    transition: 1s; /* For Light Mode Animation */
 }
 h1,
 h2,
@@ -90,12 +91,79 @@ img {
 }
 
 /* ==== Themes ==== */
+.change-theme {
+    font-size: 1.25rem;
+    cursor: pointer;
+    transition: 0.5s;
+}
+.change-theme:hover {
+    color: var(--first-color);
+}
 
-/* ==== Variable Dark Themes ==== */
+/* ==== Variable Light Themes ==== */
+body.light-theme {
+    --title-color: hsl(var(--second-hue), 15%, 15%);
+    --text-color: hsl(var(--second-hue), 8%, 35%);
+    --body-color: hsl(var(--second-hue), 10%, 95%);
+    /* --body-color: hsl(var(--second-hue), 100%, 99%); */
+    --container-color: #fff;
+    
+
+}
 
 /* 
-Color change in same parts of the website, in light theme 
+    Color change in same parts of the website, in light theme 
 */
+.light-theme .scroll-header {
+    box-shadow: 0 7px 10px hsla(0, 0%, 0%, 0.15);
+    transition: 0.4s;
+}
+.light-theme .nav_menu {
+    background-color: hsla(var(--second-hue), 65%, 90%, 0.8);
+    /* backdrop-filter: blur(10px); */
+}
+.light-theme .section_subtitle {
+    color: var(--text-color);
+}
+.light-theme .home_social-link {
+    box-shadow: 0 2px 8px hsla(var(--second-hue), 48%, 80%, 0.8);
+}
+.light-theme .home_social::after,
+.light-theme .footer_social-link {
+    background-color: var(--title-color);
+}
+.light-theme .home_social-link,
+.light-theme .home_scroll,
+.light-theme .button,
+.light-theme .button:hover,
+.light-theme .active_work,
+.light-theme .footer_title,
+.light-theme .footer_link,
+.light-theme .footer_copy {
+    color: var(--title-color);
+}
+.light-theme .about_box {
+    box-shadow: 0 2px 8px hsla(var(--second-hue), 48%, 8%, 0.1);
+}
+.light-theme .skills_content,
+.light-theme .services_card,
+.light-theme .work_card,
+.light-theme .testimonial_card,
+.light-theme .contact_card {
+    box-shadow: 0 2px 16px hsla(var(--second-hue), 48%, 8%, 0.1);
+}
+.light-theme::-webkit-scrollbar {
+    background-color: hsl(var(--second-hue), 8%, 66%);
+}
+.light-theme::-webkit-scrollbar-thumb {
+    background-color: hsl(var(--second-hue), 8%, 44%);
+}
+.light-theme::-webkit-scrollbar:hover {
+    background-color: hsl(var(--second-hue), 8%, 66%);
+}
+
+
+
 
 /* ==== Reuseable CSS Classes ==== */
 .container {
@@ -135,6 +203,7 @@ Color change in same parts of the website, in light theme
     width: 100%;
     background-color: var(--body-color);
     z-index: var(--z-fixed);
+    transition: 1s; /* For Light Mode Animation */
     
 }
 .nav {
@@ -161,7 +230,8 @@ Color change in same parts of the website, in light theme
     width: 90%;
     border-radius: 4rem;
     padding: 1rem 2.25rem;
-    backdrop-filter: blur(10px);
+    backdrop-filter: blur(5px);
+    transition: 1s; /* For Light Mode Animation */
 }
 .nav_list {
     display: flex;
@@ -179,15 +249,16 @@ Color change in same parts of the website, in light theme
 /* Active Link */
 .active-link {
     background: linear-gradient(180deg,
-                hsla(var(--first-hue), var(--sat), var(--lig), 1),
-                hsla(var(--first-hue), var(--sat), var(--lig), 0.2)
-            );
+    hsla(var(--first-hue), var(--sat), var(--lig), 1),
+    hsla(var(--first-hue), var(--sat), var(--lig), 0.2)
+    );
     box-shadow: 0 0 16px hsla(hsla(var(--first-hue), var(--sat), var(--lig), 0.4));
+    color: var(--title-color);
 }
 
 /* Change Background Header */
 .scroll-header {
-    box-shadow: 0 4px 4px hsla(0, 0, -4%, 0.3);
+    box-shadow: 0 4px 4px hsla(0, 0%, -4%, 0.3);
 }
 
 /* ============ Main ============ */
@@ -228,9 +299,9 @@ Color change in same parts of the website, in light theme
     width: 200px;
     height: 355px;
     background: linear-gradient(180deg,
-                        hsla(var(--first-hue), var(--sat), var(--lig), 1),
-                        hsla(var(--first-hue), var(--sat), var(--lig), .2)
-                    );
+        hsla(var(--first-hue), var(--sat), var(--lig), 1),
+        hsla(var(--first-hue), var(--sat), var(--lig), .2)
+    );
     border-radius: 10rem 10rem 1rem 1rem;
     display: flex;
     align-items: flex-end;
