--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,20 @@
     --z-tooltip: 10;
     --z-fixed: 100;
     --z-modal: 1000;
-} 
+}
+
+/* Responsive Typhography */
+@media screen and (min-width: 968px) {
+    :root {
+        --h1-font-size: 2.25rem;
+        --h2-font-size: 1.5rem;
+        --h3-font-size: 1.25rem;
+        --biggest-font-size: 2.5rem;
+        --small-font-size: 0.875px;
+        --smaller-font-size: 0.813rem;
+    }
+}
+
 /* ==== Base ==== */
 * {
     box-sizing: border-box;
@@ -291,7 +304,7 @@ body.light-theme {
     font-size: var(--biggest-font-size);
 }
 .home_img {
-    width: 170px;
+    width: 195px;
     /* margin-left: 23px; */
 }       
 .home_handle {
@@ -782,14 +795,72 @@ a.footer_link {
 }
 
 /* Responsive Breakpoint */
-@media screen and (min-width: 968px) {
-    :root {
-        --h1-font-size: 2.25rem;
-        --h2-font-size: 1.5rem;
-        --h3-font-size: 1.25rem;
-        --biggest-font-size: 2.5rem;
-        --small-font-size: 0.875px;
-        --smaller-font-size: 0.813rem;
+/* For small devices */
+@media screen and (max-width: 320px){
+    .nav_menu {
+        padding: 1rem 1.5rem;
+    }
+    .home {
+        margin-top: 0.5rem;
+        margin-bottom: 2.5rem;
+    }
+    .home_container {
+        row-gap: 3.5rem;
+    }
+    .home_name {
+        font-size: var(--h1-font-size);
+    }
+    .home_education {
+        margin-bottom: 1.5rem;
+    }
+    .home_buttons {
+        flex-direction: column;
+        gap: 1rem;
+    }
+    .button {
+        padding: 0.4rem 0.7rem;
+        font-size: var(--small-font-size);
+    }
+    .home_handle {
+        width: 150px;
+        height: 280px;
+    }
+    .home_img {
+        width: 145px;
+    }
+    .home_social {
+        bottom: 5rem;
+    }
+    .home_scroll {
+        bottom: 7rem;
+    }
+    .about_img {
+        width: 170px;
+    }
+    .about_info {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .about_box:last-child {
+        grid-area: 2 / 1 / 3 / 3;
+    }
+    .about_description {
+        font-size: var(--normal-font-size);
+    }
+    .skills_box {
+        column-gap: 1rem;
+    }
+    .skills_name {
+        font-size: var(--small-font-size);
+    }
+    .services_container {
+        grid-template-columns: 145px;
+        justify-content: center;
+    }
+    .work_item {
+        font-size: var(--small-font-size);
+    }
+    .work_filters {
+        column-gap: 0.05rem;
     }
 }
 
