--- a/css/style.css
+++ b/css/style.css
@@ -480,7 +480,6 @@ body.light-theme {
 
 /* ===== SERVICES ===== */
 .services_container {
-
     grid-template-columns: repeat(2, 1fr);
     gap: 1.5rem;
     padding-top: 1rem;
@@ -489,6 +488,13 @@ body.light-theme {
     background-color: var(--container-color);
     padding: 3rem 1.5rem 1.5rem;
     border-radius: 1rem;
+}
+.services_card:last-child {
+    grid-area: 2 / 1 / 3 / 3;
+    justify-content: center;
+}
+.services_card:last-child .services_button {
+    justify-content: center;
 }
 .services_title {
     font-size: var(--h3-font-size);
@@ -845,6 +851,7 @@ a.footer_link {
     }
     .about_description {
         font-size: var(--normal-font-size);
+        margin: 2rem 1rem;
     }
     .skills_box {
         column-gap: 1rem;
@@ -853,8 +860,20 @@ a.footer_link {
         font-size: var(--small-font-size);
     }
     .services_container {
-        grid-template-columns: 145px;
+        grid-template-columns: 210px;
         justify-content: center;
+    }
+    .services_card {
+        padding: 2rem 2.5rem 1.5rem;
+    }
+    .services_card:last-child {
+        grid-area: inherit;
+    }
+    .services_title {
+        margin-bottom: 1.5rem;
+    }
+    .services_card:last-child .services_button {
+        justify-content: start;
     }
     .work_item {
         font-size: var(--small-font-size);
