--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 
     /* ==== Colors ==== */
     /* hsl: hue, saturation,. lightness */
-    
+    /* source : https://colors.dopely.top/ */
     /* 
 
         purple: hsl(250, 66%, 75%);
@@ -14,13 +14,22 @@
 
     */
 
+    /* Before
+
     --first-hue:250;
     --sat: 66%;
     --lig: 75%;
+    --second-hue: 219; 
+    
+    */
+
+    --first-hue: 225;
+    --sat: 80%;
+    --lig: 65%;
     --second-hue: 219;
 
     --first-color: hsl(var(--first-hue), var(--sat), var(--lig));
-    --first-color-alt: hsl(var(--first-hue), var(--sat), 71%); /* -4% */
+    --first-color-alt: hsl(var(--first-hue), var(--sat), 61%); /* lig -4% */
     --title-color: hsl(var(--second-hue), 15%, 95%);
     --text-color: hsl(var(--second-hue), 8%, 75%);
     --text-color-light: hsl(var(--second-hue), 4%, 55%);
@@ -175,9 +184,6 @@ body.light-theme {
     background-color: hsl(var(--second-hue), 8%, 66%);
 }
 
-
-
-
 /* ==== Reuseable CSS Classes ==== */
 .container {
     max-width: 968px;
@@ -228,7 +234,7 @@ body.light-theme {
 /* LOGO */
 .nav_logo {
     color: var(--first-color);
-    font-weight: var(--font-medium);
+    font-weight: var(--font-semibold);
     transition: 0.4s;
     font-size: 1.3rem;
 }
@@ -263,7 +269,7 @@ body.light-theme {
 .active-link {
     background: linear-gradient(180deg,
     hsla(var(--first-hue), var(--sat), var(--lig), 1),
-    hsla(var(--first-hue), var(--sat), var(--lig), 0.2)
+    hsla(var(--first-hue), var(--sat), var(--lig), 0.4)
     );
     box-shadow: 0 0 16px hsla(hsla(var(--first-hue), var(--sat), var(--lig), 0.4));
     color: var(--title-color);
@@ -313,7 +319,7 @@ body.light-theme {
     height: 355px;
     background: linear-gradient(180deg,
         hsla(var(--first-hue), var(--sat), var(--lig), 1),
-        hsla(var(--first-hue), var(--sat), var(--lig), .2)
+        hsla(var(--first-hue), var(--sat), var(--lig), .5)
     );
     border-radius: 10rem 10rem 1rem 1rem;
     display: flex;
